--- a/docker-compose-stage.yaml
+++ b/docker-compose-stage.yaml
@@ -48,9 +48,32 @@ services:
       # uncomment for a potentially faster startup if you have docker --version > 25.0.0
       # start_interval: 2s
     environment:
+      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://localhost:8088}
       - DATABASE_LINK=mysql:root:${DB_ROOT_PASSWORD:-changeme}@tcp(${DB_HOST:-db}:${DB_PORT:-3306})/${DB_DATABASE:-unibee}?loc=UTC&parseTime=false
       - REDIS_ADDRESS=${REDIS_HOST:-redis}:${REDIS_PORT:-6379}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-changeme}
       - UNIBEE_LICENSE=${UNIBEE_LICENSE:-}
     ports:
       - ${API_PORT:-8088}:8088
+
+  userPortal:
+    container_name: unibee-user-portal
+    image: unibee/user-portal:daily
+    restart: unless-stopped
+    depends_on:
+      - api
+    environment:
+      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://localhost:8088}
+    ports:
+      - ${API_PORT:-80}:80
+
+  adminPortal:
+    container_name: unibee-admin-portal
+    image: unibee/merchant-portal:daily
+    restart: unless-stopped
+    depends_on:
+      - api
+    environment:
+      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://localhost:8088}
+    ports:
+      - ${API_PORT:-8086}:80      
