--- a/docker-compose-stage.yaml
+++ b/docker-compose-stage.yaml
@@ -69,7 +69,7 @@ services:
 
   adminPortal:
     container_name: unibee-admin-portal
-    image: unibee/merchant-portal:stage
+    image: unibee/admin-portal:stage
     restart: unless-stopped
     depends_on:
       - api
