--- a/kubernetes/unibee_nginx.yaml
+++ b/kubernetes/unibee_nginx.yaml
@@ -62,7 +62,7 @@ data:
             # ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
             # ssl_prefer_server_ciphers on;    
 
-            location /api {
+            location /api/ {
                 proxy_set_header           X-Real-IP $remote_addr;
                 proxy_set_header           X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header           X-Forwarded-Proto $scheme;
