--- a/docker-compose-stage.yaml
+++ b/docker-compose-stage.yaml
@@ -8,6 +8,7 @@ services:
   db:
     image: mysql:8.0.13
     container_name: unibee-db
+    platform: linux/amd64
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${DB_DATABASE:-unibee}
@@ -30,6 +31,7 @@ services:
   redis:
     image: redis:6-alpine
     container_name: unibee-redis
+    platform: linux/amd64
     restart: unless-stopped
     command: --port ${REDIS_PORT:-6379} --requirepass ${REDIS_PASSWORD:-changeme}
     healthcheck:
@@ -42,6 +44,7 @@ services:
   api:
     container_name: unibee-api
     image: unibee/api:stage
+    platform: linux/amd64
     restart: unless-stopped
     # uncomment for startup depends_on db and redis service_healthy
     # depends_on:
@@ -50,14 +53,14 @@ services:
     #   redis:
     #     condition: service_healthy
     healthcheck:
-      test: curl -f http://localhost:8088/health || exit 1
+      test: curl -f http://127.0.0.1:8088/health || exit 1
       interval: 10s
       start_period: 30s
       timeout: 60s
       # uncomment for a potentially faster startup if you have docker --version > 25.0.0
       # start_interval: 2s
     environment:
-      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://localhost:8088}
+      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://127.0.0.1:8088}
       - DATABASE_LINK=mysql:root:${DB_ROOT_PASSWORD:-changeme}@tcp(${DB_HOST:-db}:${DB_PORT:-3306})/${DB_DATABASE:-unibee}?loc=UTC&parseTime=false
       - REDIS_ADDRESS=${REDIS_HOST:-redis}:${REDIS_PORT:-6379}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-changeme}
@@ -68,15 +71,17 @@ services:
   userPortal:
     container_name: unibee-user-portal
     image: unibee/user-portal:stage
+    platform: linux/amd64
     restart: unless-stopped
     environment:
-      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://localhost:8088}
+      - UNIBEE_API_URL=${UNIBEE_API_URL:-http://127.0.0.1:8088}
     ports:
       - ${API_PORT:-8086}:80
 
   adminPortal:
     container_name: unibee-admin-portal
     image: unibee/admin-portal:stage
+    platform: linux/amd64
     restart: unless-stopped
     environment:
       - UNIBEE_API_URL=${UNIBEE_API_URL:-http://localhost:8088}
