--- a/kubernetes/unibee_admin_portal.yaml
+++ b/kubernetes/unibee_admin_portal.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: unibee-admin-protal
           image: unibee/admin-portal:stage
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             - name: UNIBEE_API_URL
               valueFrom:
