--- a/kubernetes/unibee_nginx.yaml
+++ b/kubernetes/unibee_nginx.yaml
@@ -174,7 +174,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-  name: unibee-nginx-service
+  name: unibee-nginx-svc
   namespace: default
 spec:
   ports:
