--- a/kubernetes/unibee_nginx.yaml
+++ b/kubernetes/unibee_nginx.yaml
@@ -181,6 +181,7 @@ spec:
     - name: "http"
       port: 80
       targetPort: 80
+      nodePort: 30080
       protocol: TCP
     - name: "https"
       port: 443
