--- a/kubernetes/unibee_user_portal.yaml
+++ b/kubernetes/unibee_user_portal.yaml
@@ -17,7 +17,7 @@ spec:
       restartPolicy: Always
       containers:
         - name: unibee-user-portal
-          image: unibee/user-portal:1.2
+          image: unibee/user-portal:latest
           imagePullPolicy: IfNotPresent
           env:
             - name: UNIBEE_API_URL
