--- a/.github/workflows/release-sub-projects.yml
+++ b/.github/workflows/release-sub-projects.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -14,7 +18,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
 
-      - name: Trigger release
+      - name: Trigger admin portal release
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
@@ -22,7 +26,7 @@ jobs:
           event-type: release
           client-payload: '{"version": "${{ github.ref_name }}"}'
 
-      - name: Trigger release
+      - name: Trigger user portal release
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
@@ -30,7 +34,7 @@ jobs:
           event-type: release
           client-payload: '{"version": "${{ github.ref_name }}"}'
 
-      - name: Trigger release
+      - name: Trigger API release
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
@@ -42,14 +46,14 @@ jobs:
       # which is not what we want.
       - name: Bump images version
         run: |
-          sed -i -e "s/\(unibee\/user-portal:\).*\$/\1v1.0.0/g" "docker-compose.yaml"
-          sed -i -e "s/\(unibee\/admin-portal:\).*\$/\1v1.0.0/g" "docker-compose.yaml"
-          sed -i -e "s/\(unibee\/api:\).*\$/\1v1.0.0/g" "docker-compose.yaml"
+          sed -i -e "s/\(unibee\/user-portal:\).*\$/\1${{ github.ref_name }}/g" "./docker-compose.yaml"
+          sed -i -e "s/\(unibee\/admin-portal:\).*\$/\1${{ github.ref_name }}/g" "./docker-compose.yaml"
+          sed -i -e "s/\(unibee\/api:\).*\$/\1${{ github.ref_name }}/g" "docker-compose.yaml"
 
       - name: Commit changes and create PR
         uses: peter-evans/create-pull-request@v7
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT}}
           commit-message: Bump images version
           branch: release/${{ github.ref_name }}
           base: main
