--- a/kubernetes/unibee_api.yaml
+++ b/kubernetes/unibee_api.yaml
@@ -16,7 +16,7 @@ spec:
       restartPolicy: Always
       containers:
         - name: unibee-api
-          image: unibee/api:1.2
+          image: unibee/api:v1.1.0
           imagePullPolicy: IfNotPresent
           env:
             - name: UNIBEE_API_URL
