--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,6 +70,32 @@ services:
     ports:
       - ${API_PORT:-8088}:8088
 
+  license:
+    container_name: unibee-license
+    image: unibee/license-api:v1.0.1-premium
+    platform: linux/amd64
+    restart: unless-stopped
+    # uncomment for startup depends_on db and redis service_healthy
+    # depends_on:
+    #   db:
+    #     condition: service_healthy
+    #   redis:
+    #     condition: service_healthy
+    healthcheck:
+      test: curl -f http://127.0.0.1:8080/health || exit 1
+      interval: 10s
+      start_period: 30s
+      timeout: 60s
+      # uncomment for a potentially faster startup if you have docker --version > 25.0.0
+      # start_interval: 2s
+    environment:
+      - REDIS_ADDRESS=${REDIS_HOST:-redis}:${REDIS_PORT:-6379}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-changeme}
+      - ENV=${ENV:-prod}
+      - MODE=stand-alone
+    ports:
+      - ${API_PORT:-8080}:8080      
+
   userPortal:
     container_name: unibee-user-portal
     image: unibee/user-portal:v1.1.0
