--- a/kubernetes/unibee_nginx.yaml
+++ b/kubernetes/unibee_nginx.yaml
@@ -62,6 +62,20 @@ data:
             # ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
             # ssl_prefer_server_ciphers on;    
 
+            location /license-api/ {
+                proxy_set_header           X-Real-IP $remote_addr;
+                proxy_set_header           X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header           X-Forwarded-Proto $scheme;
+                proxy_set_header           X-Requested-With $http_x_requested_with;
+                proxy_set_header           Host $host;
+                proxy_redirect             off;
+
+                add_header                 X-Soure '223';
+                add_header                 Upsteam-addr '$upstream_addr';
+                add_header                 Strict-Transport-Security max-age=0; 
+                proxy_pass http://unibee-license-api-svc/;
+            }              
+
             location /api/ {
                 proxy_set_header           X-Real-IP $remote_addr;
                 proxy_set_header           X-Forwarded-For $proxy_add_x_forwarded_for;
