--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
 
   redis:
-    image: redis:6-alpine
+    image: redis:6
     container_name: unibee-redis
     platform: linux/amd64
     restart: unless-stopped
