chore: upgrade nginx to 1.27.2 and fix typo

--- a/nginx.conf
+++ b/nginx.conf
@@ -49,8 +49,8 @@ http {
             proxy_set_header           Host $host;
             proxy_redirect             off;
 
-            add_header                 X-Soure '223';
-            add_header                 Upsteam-addr '$upstream_addr';
+            add_header                 X-Source '223';
+            add_header                 Upstream-addr '$upstream_addr';
             add_header                 Strict-Transport-Security max-age=0; 
             proxy_pass http://licenseApi/;
         }              
@@ -63,8 +63,8 @@ http {
             proxy_set_header           Host $host;
             proxy_redirect             off;
 
-            add_header                 X-Soure '223';
-            add_header                 Upsteam-addr '$upstream_addr';
+            add_header                 X-Source '223';
+            add_header                 Upstream-addr '$upstream_addr';
             add_header                 Strict-Transport-Security max-age=0; 
             proxy_pass http://api/;
         }
